test/razor.test.views/errors/errorReadingView.jshtml
<h1>partialViewNotFound.jshtml</h1>
<div>
    <!--[#2.3.1]-->
    @Html.partial("./_partial.jshtml")
</div>